[package]
name = "booklet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.107"
terminal = "0.2.1"
toml = "0.7.5"
